--- a/templates/layouts/main.gohtml
+++ b/templates/layouts/main.gohtml
@@ -5,7 +5,7 @@
         {{template "css" .}}
         {{template "js" .}}
     </head>
-    <body class="has-background-light" style="min-height:100%;">
+    <body>
         {{template "content" .}}
     </body>
 </html>
