--- a/templates/pages/home.gohtml
+++ b/templates/pages/home.gohtml
@@ -14,12 +14,20 @@
         }
     </script>
 
-    <form id="form-a" hx-post="/project" hx-ext="json-enc">
-        <input id="replId" name="replId" value="" type="hidden"/>
-        <select id="language" name="language">
-            <option value="nodejs">Node.js</option>
-            <option value="python">Python</option>
-        </select>
-        <button type="submit" onclick="setReplId()">create replc</button>
-    </form>
+    <div class="h-screen flex items-center justify-center">
+        <form id="form-a" hx-post="/project" hx-ext="json-enc" class="bg-white shadow-md rounded px-8 pt-6 pb-8">
+            <input id="replId" name="replId" value="" type="hidden"/>
+            <div class="mb-4">
+                <select id="language" name="language" class="block w-full px-4 py-2 border rounded focus:outline-none focus:border-blue-500">
+                    <option value="nodejs">Node.js</option>
+                    <option value="python">Python</option>
+                </select>
+            </div>
+            <div class="mb-4">
+                <button type="submit" onclick="setReplId()" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
+                    Create Replc
+                </button>
+            </div>
+        </form>
+        </div>
 {{end}}
