--- a/templates/layouts/main.gohtml
+++ b/templates/layouts/main.gohtml
@@ -3,7 +3,7 @@
     <head>
         {{template "metatags" .}}
         {{template "css" .}}
-        {{template "js" .}}
+        {{template "htmxjs" .}}
     </head>
     <body>
         {{template "content" .}}
