--- a/templates/components/core.gohtml
+++ b/templates/components/core.gohtml
@@ -24,3 +24,7 @@
 {{define "websocketjs"}}
     <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
 {{end}}
+
+{{define "monacoeditor"}}
+    <script src="https://cdn.jsdelivr.net/npm/monaco-editor@latest/min/vs/loader.js"></script>
+{{end}}
