--- a/templates/pages/coding.gohtml
+++ b/templates/pages/coding.gohtml
@@ -1,8 +1,15 @@
 {{define "content"}}
     {{template "websocketjs" .}}
+    {{template "monacoeditor" .}}
     {{template "codingjsscript" .}}
 
-    <div class="bg-gray-100  h-screen">
+    <!-- Loader HTML -->
+    <div id="ide-loader" hx-trigger="load delay:500ms, swap" class="fixed top-0 left-0 w-full h-full flex items-center justify-center bg-gray-900 bg-opacity-50 z-50">
+        <div class="animate-spin rounded-full h-30 w-30 border-b-2 border-gray-100"></div>
+    </div>
+
+    <!-- Your data HTML -->
+    <div id="ide-screen" hx-trigger="load delay:500ms, swap" class="bg-gray-100 h-screen hidden">
         <div class="flex h-screen">
             <!-- Sidebar -->
             <div class="w-1/4 bg-gray-800 text-white">
@@ -19,21 +26,7 @@
                 </div>
             </div>
             <!-- Editor -->
-            <div class="flex-1 flex flex-col">
-                <!-- Toolbar -->
-                <div class="bg-gray-700 text-white p-4">
-                    <div class="flex justify-between items-center">
-                        <div>File: index.html</div>
-                        <div>Language: HTML</div>
-                        <!-- Add more toolbar options as needed -->
-                    </div>
-                </div>
-                <!-- Editor content -->
-                <div class="flex-1 overflow-y-auto p-4">
-                    <h1 class="text-xl font-semibold mb-4">Editor Content</h1>
-                    <!-- Editor content goes here -->
-                </div>
-            </div>
+            <div id="ide-editor" class="flex-1 flex flex-col" style="width: 400px; height: 100vh;"></div>
         </div>
         <!-- Status bar -->
         <div class="bg-gray-700 text-white p-4">
