--- a/templates/scripts/home.gohtml
+++ b/templates/scripts/home.gohtml
@@ -1,6 +1,7 @@
 {{define "homejsscript"}}
     <script>
         const SLUG_WORKS = ["car", "dog", "computer", "person", "inside", "word", "for", "please", "to", "cool", "open", "source"];
+
         function getRandomSlug() {
             let slug = "";
             for (let i = 0; i < 3; i++) {
@@ -8,9 +9,13 @@
             }
             return slug;
         }
+        
         function setReplId(){
             const replId = getRandomSlug()
-            document.getElementById("replId").value = getRandomSlug()
+            document.getElementById("replId").value = getRandomSlug();
+
+            document.getElementById("fsb-loader").classList.remove("hidden");
+            document.getElementById("fsb-text").classList.add("hidden");
         }
     </script>
 {{end}}
