--- a/templates/components/core.gohtml
+++ b/templates/components/core.gohtml
@@ -28,3 +28,7 @@
 {{define "monacoeditor"}}
     <script src="https://cdn.jsdelivr.net/npm/monaco-editor@latest/min/vs/loader.js"></script>
 {{end}}
+
+{{define "fontawesome"}}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+{{end}}
