--- a/templates/layouts/main.gohtml
+++ b/templates/layouts/main.gohtml
@@ -4,6 +4,7 @@
         {{template "metatags" .}}
         {{template "css" .}}
         {{template "htmxjs" .}}
+        {{template "commonjsscript" .}}
     </head>
     <body>
         {{template "content" .}}
