--- a/templates/pages/coding.gohtml
+++ b/templates/pages/coding.gohtml
@@ -18,11 +18,13 @@
                 <div class="px-4 py-1">
                     <h2 class="text-lg font-semibold mb-1">File Explorer</h2>
                     <!-- List of files -->
-                    <ul id="fileExplorer"></ul>
+                    <ul id="file-explorer"></ul>
                 </div>
             </div>
             <!-- Editor -->
-            <div id="ide-editor" class="flex-1 flex flex-col" style="height:95%"></div>
+            <div id="ide-editor-tabs" class="flex-1 flex flex-col h-full">
+                <ul id="visited-files" class="flex p-1"></ul>
+            </div>
             <!-- Terminal -->
             <div class="w-1/5 bg-black text-white">
                 <div class="px-4 py-1">
