--- a/templates/pages/coding.gohtml
+++ b/templates/pages/coding.gohtml
@@ -1,4 +1,5 @@
 {{define "content"}}
+    {{template "xtermjs" .}}
     {{template "websocketjs" .}}
     {{template "monacoeditor" .}}
     {{template "fontawesome" .}}
@@ -27,8 +28,9 @@
             </div>
             <!-- Terminal -->
             <div class="w-1/5 bg-black text-white">
-                <div class="px-4 py-1">
+                <div class="p-1">
                     <h2 class="text-lg font-semibold mb-1">Terminal</h2>
+                    <div id="terminal-container"></div>
                 </div>
             </div>
         </div>
